--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
   "author": "Benjamin Piouffle",
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.5"
   },
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "dotenv": "^6.1.0",
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.1.0"
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "discord.js": "^11.4.2",
+    "dotenv": "^6.1.0",
+    "string-template": "^1.0.0"
   }
 }
