--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "dev": "nodemon",
     "build": "rm -rf dist && tsc -p .",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "tslint './src/**/*.ts'"
   },
   "keywords": [
     "discord",
